--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     branches: ["main", "master"]
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,6 +22,7 @@ jobs:
           distribution: temurin
           java-version: "17"
 
+      # ForgeGradle 6 does NOT support Gradle 9+, so we pin 8.8
       - name: Set up Gradle 8.8
         uses: gradle/actions/setup-gradle@v4
         with:
@@ -27,7 +31,7 @@ jobs:
       - name: Build
         run: gradle clean build --no-daemon
 
-      - name: Upload artifact
+      - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
         with:
           name: mowzieomcompat-jar
